# Oz_coding

./: README.md  coding.py  mini_project1.py  설문조사양식.html  태그.html
DB/: Sakila.sql  yes24DB.sql
django/part1/: db.sqlite3
django/part2/: db.sqlite3
django/part3/: db.sqlite3  pyproject.toml
django/part4/: pyproject.toml
django/part4/config/: authentication.py
django/part4/feeds/: urls.py  views.py
django/part4/reviews/: views.py
django/part4/users/: views.py
django/part5/: 1_data_analysis.py
django/part6/: oz_machin_learning.py
django/part7/: db.sqlite3
flask/part4/: app.py  posts_routes.py
flask/part5/: app.py  models.py  routes.py
flask/templates/: index.html
html/: 블로그.html  회원가입.html
html_css/: 간단한반응형.html  다이어리.html  박스활용.html  블로그.html  프로필.css  회원가입.html
html_css/간단한소개/: 간단한소개.css  간단한소개.html
html_css/나만의채팅/: chat.css  chat.html
html_css/눈 사람 만들기/: 눈사람.css  눈사람.html
html_css/더덕마켓/: banner.css  footer.css  header.css  index.html  info.css  notice.css
html_css/말풍선/: chat.css  chat.html
html_css/오즈코딩홈페이지/: header.css  index.html  info.css  notice.css
html_css/햄버거바/: hh.css  index.html
html_css/화면클론하기/: header.css  index.html  info.css
javascript/: js복습과제5.html  lucky.js  monster.html  거스름돈-계산.js  나머지1.js  나이비교.js  몫구하기.js  사용자입력받기.html  우영우낱말.js  짝수더하며계단오르기.js  특정문자탐색.js  팩토리얼.js  홀수보내버려.js
javascript/js복습/: js복습.html  js복습2.html  회원가입.css  회원가입폼.html
javascript/js복습2/: 4배수5개.html  미스테리숫자.html  별찍기.html  평균값.html
javascript/js복습3/: 계산기.html  계산기.js  구구단.html  스톱워치.html  (+1 more)
python/: Chapter_17_20.py  data_generate.py
(+51 files in other folders)
